--- a/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
+++ b/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
@@ -3,95 +3,73 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ThreeLabelsTableViewCell" customModule="MemeThing" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="403" height="76"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="403" height="76"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="bJi-xz-fR4" customClass="ThreeLabelsTableViewCell" customModule="MemeThing" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="415" height="79"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="bJi-xz-fR4" id="Rzt-z1-Fpg">
+                <rect key="frame" x="0.0" y="0.0" width="415" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="77y-AD-EAl">
-                        <rect key="frame" x="10" y="7.5" width="383" height="61"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nu0-r4-0XF">
+                        <rect key="frame" x="10.5" y="6" width="394" height="67"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="IMy-6n-dg6">
-                                <rect key="frame" x="6" y="0.0" width="371" height="61"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MxV-gb-fQ4">
+                                <rect key="frame" x="8" y="4" width="378" height="59"/>
                                 <subviews>
-                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Yg-vO-5ZC">
-                                        <rect key="frame" x="-54" y="0.0" width="50" height="61"/>
-                                        <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QYq-x1-pUk" customClass="ProfileImage" customModule="MemeThing" customModuleProvider="target">
-                                                <rect key="frame" x="2.5" y="8" width="45" height="45"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" secondItem="QYq-x1-pUk" secondAttribute="height" multiplier="1:1" id="HXy-MN-8EQ"/>
-                                                </constraints>
-                                            </imageView>
-                                        </subviews>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="50" id="5Mo-rp-fxu"/>
-                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="QYq-x1-pUk" secondAttribute="bottom" constant="6" id="6s3-sy-ASh"/>
-                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="top" relation="greaterThanOrEqual" secondItem="4Yg-vO-5ZC" secondAttribute="top" constant="6" id="Roa-FR-JIG"/>
-                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="width" secondItem="4Yg-vO-5ZC" secondAttribute="width" multiplier="0.9" priority="999" id="TPL-XT-4ey"/>
-                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="centerX" secondItem="4Yg-vO-5ZC" secondAttribute="centerX" id="b42-qe-8xq"/>
-                                            <constraint firstItem="QYq-x1-pUk" firstAttribute="centerY" secondItem="4Yg-vO-5ZC" secondAttribute="centerY" id="o87-dN-8Ei"/>
-                                        </constraints>
-                                    </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQ6-Cb-luM" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="123.5" height="61"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="First Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="seq-uL-uuu" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="120.5" height="59"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vnv-pL-FQx" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="131.5" y="0.0" width="124" height="61"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Second Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osi-8C-EsV" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="128.5" y="0.0" width="121" height="59"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pAR-ik-eaB" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="263.5" y="0.0" width="107.5" height="61"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOE-MQ-7ZR" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="257.5" y="0.0" width="120.5" height="59"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="IMy-6n-dg6" firstAttribute="leading" secondItem="77y-AD-EAl" secondAttribute="leading" constant="6" id="JUL-Gu-MM9"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="Ucg-Cc-Ngy"/>
-                            <constraint firstAttribute="bottom" secondItem="IMy-6n-dg6" secondAttribute="bottom" id="ozo-R2-6Lx"/>
-                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="600" id="wLx-qt-llM"/>
-                            <constraint firstItem="IMy-6n-dg6" firstAttribute="top" secondItem="77y-AD-EAl" secondAttribute="top" id="yRr-8x-6uX"/>
-                            <constraint firstAttribute="trailing" secondItem="IMy-6n-dg6" secondAttribute="trailing" constant="6" id="zIp-7f-9Fm"/>
+                            <constraint firstItem="MxV-gb-fQ4" firstAttribute="leading" secondItem="Nu0-r4-0XF" secondAttribute="leading" constant="8" id="H3w-8o-1R6"/>
+                            <constraint firstAttribute="trailing" secondItem="MxV-gb-fQ4" secondAttribute="trailing" constant="8" id="IAZ-rS-bsc"/>
+                            <constraint firstAttribute="bottom" secondItem="MxV-gb-fQ4" secondAttribute="bottom" constant="4" id="Mwi-3n-SCV"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="WYk-Yg-pE2"/>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="600" id="YO4-Ke-lja"/>
+                            <constraint firstItem="MxV-gb-fQ4" firstAttribute="top" secondItem="Nu0-r4-0XF" secondAttribute="top" constant="4" id="g9j-xZ-PnY"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="77y-AD-EAl" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="0.95" priority="999" id="91k-Fn-auY"/>
-                    <constraint firstItem="77y-AD-EAl" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="OTt-Fd-2Sh"/>
-                    <constraint firstItem="77y-AD-EAl" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.8" id="saj-3f-e1r"/>
-                    <constraint firstItem="77y-AD-EAl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="vgL-xP-8z7"/>
+                    <constraint firstItem="Nu0-r4-0XF" firstAttribute="width" secondItem="Rzt-z1-Fpg" secondAttribute="width" multiplier="0.95" id="B0Q-xJ-IYt"/>
+                    <constraint firstItem="Nu0-r4-0XF" firstAttribute="centerX" secondItem="Rzt-z1-Fpg" secondAttribute="centerX" id="cec-aX-UcM"/>
+                    <constraint firstItem="Nu0-r4-0XF" firstAttribute="height" secondItem="Rzt-z1-Fpg" secondAttribute="height" multiplier="0.85" id="irP-eX-HeE"/>
+                    <constraint firstItem="Nu0-r4-0XF" firstAttribute="centerY" secondItem="Rzt-z1-Fpg" secondAttribute="centerY" id="qcl-89-Ant"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="containerView" destination="77y-AD-EAl" id="uJE-zi-TdE"/>
-                <outlet property="firstLabel" destination="qQ6-Cb-luM" id="ybX-5D-vEY"/>
-                <outlet property="secondLabel" destination="vnv-pL-FQx" id="ESn-FR-EcI"/>
-                <outlet property="thirdLabel" destination="pAR-ik-eaB" id="TSS-nz-aR1"/>
+                <outlet property="containerView" destination="Nu0-r4-0XF" id="8Jl-Fa-zsd"/>
+                <outlet property="firstLabel" destination="seq-uL-uuu" id="pcQ-6F-e3O"/>
+                <outlet property="secondLabel" destination="osi-8C-EsV" id="Vjh-fP-RDg"/>
+                <outlet property="thirdLabel" destination="aOE-MQ-7ZR" id="ENz-wG-nVy"/>
             </connections>
-            <point key="canvasLocation" x="36" y="-24"/>
+            <point key="canvasLocation" x="58.695652173913047" y="-26.450892857142858"/>
         </tableViewCell>
     </objects>
 </document>
