--- a/MemeThing/Views/Waiting.storyboard
+++ b/MemeThing/Views/Waiting.storyboard
@@ -91,7 +91,7 @@
                             <constraint firstItem="jS9-4s-OWv" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="oAf-Wn-b0B"/>
                             <constraint firstItem="B3v-Lj-bVa" firstAttribute="leading" secondItem="KnZ-49-nEF" secondAttribute="leading" id="pwu-aJ-mCi"/>
                             <constraint firstItem="2uS-Iu-RsD" firstAttribute="centerY" secondItem="KnZ-49-nEF" secondAttribute="centerY" multiplier="0.4" priority="999" id="pz8-kn-4cF"/>
-                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="width" relation="lessThanOrEqual" secondItem="fVo-U2-gzk" secondAttribute="width" id="rjh-a0-QfO"/>
+                            <constraint firstItem="2uS-Iu-RsD" firstAttribute="width" relation="lessThanOrEqual" secondItem="fVo-U2-gzk" secondAttribute="width" multiplier="0.95" id="rjh-a0-QfO"/>
                             <constraint firstItem="2zm-D0-H3U" firstAttribute="leading" secondItem="VjZ-lY-irn" secondAttribute="leading" id="u0u-Mf-Yzf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="KnZ-49-nEF"/>
