--- a/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
+++ b/MemeThing/Views/Custom Views/Custom TableView Cells/ThreeLabelsTableViewCell.xib
@@ -19,22 +19,40 @@
                         <rect key="frame" x="10.5" y="6" width="394" height="67"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="MxV-gb-fQ4">
-                                <rect key="frame" x="8" y="4" width="378" height="59"/>
+                                <rect key="frame" x="8" y="2" width="378" height="63"/>
                                 <subviews>
+                                    <view hidden="YES" contentMode="scaleToFill" horizontalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="Fm8-aA-7LC">
+                                        <rect key="frame" x="-50" y="0.0" width="50" height="63"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XiX-uy-0qA" customClass="ProfileImage" customModule="MemeThing" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="6.5" width="50" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" secondItem="XiX-uy-0qA" secondAttribute="height" multiplier="1:1" id="GGs-ZJ-KEa"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstItem="XiX-uy-0qA" firstAttribute="width" secondItem="Fm8-aA-7LC" secondAttribute="width" id="1bD-dk-Wy9"/>
+                                            <constraint firstAttribute="width" constant="50" id="MNy-zu-kHv"/>
+                                            <constraint firstItem="XiX-uy-0qA" firstAttribute="centerY" secondItem="Fm8-aA-7LC" secondAttribute="centerY" id="XUC-EM-lYW"/>
+                                            <constraint firstItem="XiX-uy-0qA" firstAttribute="centerX" secondItem="Fm8-aA-7LC" secondAttribute="centerX" id="Zh6-gi-wIY"/>
+                                        </constraints>
+                                    </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="First Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="seq-uL-uuu" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="120.5" height="59"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="120.5" height="63"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Second Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osi-8C-EsV" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="128.5" y="0.0" width="121" height="59"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="251" text="Second Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="osi-8C-EsV" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
+                                        <rect key="frame" x="128.5" y="0.0" width="121" height="63"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Third Label" textAlignment="right" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aOE-MQ-7ZR" customClass="MemeThingLabel" customModule="MemeThing" customModuleProvider="target">
-                                        <rect key="frame" x="257.5" y="0.0" width="120.5" height="59"/>
+                                        <rect key="frame" x="257.5" y="0.0" width="120.5" height="63"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -47,10 +65,10 @@
                         <constraints>
                             <constraint firstItem="MxV-gb-fQ4" firstAttribute="leading" secondItem="Nu0-r4-0XF" secondAttribute="leading" constant="8" id="H3w-8o-1R6"/>
                             <constraint firstAttribute="trailing" secondItem="MxV-gb-fQ4" secondAttribute="trailing" constant="8" id="IAZ-rS-bsc"/>
-                            <constraint firstAttribute="bottom" secondItem="MxV-gb-fQ4" secondAttribute="bottom" constant="4" id="Mwi-3n-SCV"/>
+                            <constraint firstAttribute="bottom" secondItem="MxV-gb-fQ4" secondAttribute="bottom" constant="2" id="Mwi-3n-SCV"/>
                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="55" id="WYk-Yg-pE2"/>
                             <constraint firstAttribute="width" relation="lessThanOrEqual" constant="600" id="YO4-Ke-lja"/>
-                            <constraint firstItem="MxV-gb-fQ4" firstAttribute="top" secondItem="Nu0-r4-0XF" secondAttribute="top" constant="4" id="g9j-xZ-PnY"/>
+                            <constraint firstItem="MxV-gb-fQ4" firstAttribute="top" secondItem="Nu0-r4-0XF" secondAttribute="top" constant="2" id="g9j-xZ-PnY"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -66,6 +84,8 @@
             <connections>
                 <outlet property="containerView" destination="Nu0-r4-0XF" id="8Jl-Fa-zsd"/>
                 <outlet property="firstLabel" destination="seq-uL-uuu" id="pcQ-6F-e3O"/>
+                <outlet property="photoContainerView" destination="Fm8-aA-7LC" id="Q1C-wQ-P5l"/>
+                <outlet property="profilePhotoImageView" destination="XiX-uy-0qA" id="3hm-W0-jdI"/>
                 <outlet property="secondLabel" destination="osi-8C-EsV" id="Vjh-fP-RDg"/>
                 <outlet property="thirdLabel" destination="aOE-MQ-7ZR" id="ENz-wG-nVy"/>
             </connections>
